// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`layout snapshots dashboard view at 140x40 1`] = `
"devagent-ts v0.1.0  │ Mission: add authentication                                                   MODE: CODE   MODEL: qwen3:30b   10:42:11
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
MISSION                        │ ACTIVITY FEED                                                              │ CONTEXT
add authentication             │ > create filesystem tool                                                   │ 📁 Workspace     ollama-agent
 ✓ Understand                  │                                                                            │ ⎇ Branch                 main
 ✓ Inspect                     │ • Analyzing project structure and existing patterns...                     │ ◆ Language         TypeScript
 ✓ Plan                        │     • Reading package.json                                                 │ ⚙ Framework             React
 ▶ Execute              0m 00s │     • Found TypeScript project                                             │ ✓ Tests                  Jest
 ○ Validate                    │   ↳ local/qwen3:30b                                                        │ 🕐 Updated           10:42:11
 ○ Repair                      │                                                                            │ ──────────────────────────────
 ○ Review                      │ 📄 Gemfile (pending_review) +1 -0                                          │ FILES (2 CHANGED)
 ○ Complete                    │   +gem 'devise'                                                            │ M src/tools/fs.ts
   ── ✓ Create User model      │                                                                            │ A src/tools/index.ts
   ── ▶ Add Devise gem         │                                                                            │
────────────────────────────── │                                                                            │
TOOLS                          │                                                                            │
▶ edit_file                (1) │                                                                            │
View all tools... (/tools)     │                                                                            │
                               │                                                                            │
                               │                                                                            │
                               │                                                                            │
                               │                                                                            │
                               │                                                                            │
                               │                                                                            │
                               │ ────────────────────────────────────────────────────────────────────────── │
                               │ DIFF PREVIEW                                                               │
                               │ Gemfile                                                             +1 -0  │
                               │ +gem 'devise'                                                              │
                               │                                                                        1/1 │
                               │                                                                            │ ──────────────────────────────
                               │                                                                            │ DIAGNOSTICS
                               │                                                                            │ Errors                       0
                               │                                                                            │ Warnings                     —
                               │                                                                            │ Infos                        —
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
Chat· │ Plan· │ Exec✓ │ Tasks2 │ Git2 │ Logs· │ Mem· │ Mdl· │ MCP· │ Skl· │ LSP· │ Tok48k/71k
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
>
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
● Connected │ 🔀 Git main │ Context: 48k / 71k tokens │ ⏱ 0m │ Ctrl+P Palette"
`;

exports[`layout snapshots same structure, density-only changes at 80x24 1`] = `
"devagent-ts v0.1.0                      MODE: CODE   MODEL: qwen3:30b   10:42:11
────────────────────────────────────────────────────────────────────────────────
Resize to ≥130 cols for the full dashboard.
> create filesystem tool

• Analyzing project structure and existing patterns...
    • Reading package.json
    • Found TypeScript project
  ↳ local/qwen3:30b









───────────────────────────────────────────────────────────────────────────────
Chat· │ Plan· │ Exec▶ │ Tasks2 │ Git2 │ Logs· │ Mem· │ Mdl· │ MCP· │ Skl· │ LSP·
───────────────────────────────────────────────────────────────────────────────
>
───────────────────────────────────────────────────────────────────────────────
● Connected │ 🔀 Git main │ Context: 48k / 71k tokens │ ⏱ 0m │ Ctrl+P Palette"
`;

exports[`layout snapshots same structure, density-only changes at 100x30 1`] = `
"devagent-ts v0.1.0                                          MODE: CODE   MODEL: qwen3:30b   10:42:11
────────────────────────────────────────────────────────────────────────────────────────────────────
Resize to ≥130 cols for the full dashboard.
> create filesystem tool

• Analyzing project structure and existing patterns...
    • Reading package.json
    • Found TypeScript project
  ↳ local/qwen3:30b















───────────────────────────────────────────────────────────────────────────────────────────────────
Chat· │ Plan· │ Exec▶ │ Tasks2 │ Git2 │ Logs· │ Mem· │ Mdl· │ MCP· │ Skl· │ LSP· │ Tok48k/71k
───────────────────────────────────────────────────────────────────────────────────────────────────
>
───────────────────────────────────────────────────────────────────────────────────────────────────
● Connected │ 🔀 Git main │ Context: 48k / 71k tokens │ ⏱ 0m │ Ctrl+P Palette"
`;

exports[`layout snapshots same structure, density-only changes at 120x30 1`] = `
"devagent-ts v0.1.0                                                              MODE: CODE   MODEL: qwen3:30b   10:42:11
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
Resize to ≥130 cols for the full dashboard.
> create filesystem tool

• Analyzing project structure and existing patterns...
    • Reading package.json
    • Found TypeScript project
  ↳ local/qwen3:30b















───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
Chat· │ Plan· │ Exec▶ │ Tasks2 │ Git2 │ Logs· │ Mem· │ Mdl· │ MCP· │ Skl· │ LSP· │ Tok48k/71k
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
>
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
● Connected │ 🔀 Git main │ Context: 48k / 71k tokens │ ⏱ 0m │ Ctrl+P Palette"
`;

exports[`layout snapshots same structure, density-only changes at 160x45 1`] = `
"devagent-ts v0.1.0                                                                                                      MODE: CODE   MODEL: qwen3:30b   10:42:11
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
MISSION                        │ ACTIVITY FEED                                                                                  │ CONTEXT
      No active mission        │ > create filesystem tool                                                                       │ 📁 Workspace     ollama-agent
 Start one with /plan <goal>   │                                                                                                │ ⎇ Branch                 main
────────────────────────────── │ • Analyzing project structure and existing patterns...                                         │ 🕐 Updated           10:42:11
TOOLS                          │     • Reading package.json                                                                     │ ──────────────────────────────
▶ edit_file                (1) │     • Found TypeScript project                                                                 │ FILES (2 CHANGED)
View all tools... (/tools)     │   ↳ local/qwen3:30b                                                                            │ M src/tools/fs.ts
                               │                                                                                                │ A src/tools/index.ts
                               │                                                                                                │
                               │                                                                                                │
                               │                                                                                                │
                               │                                                                                                │
                               │                                                                                                │
                               │                                                                                                │
                               │                                                                                                │
                               │                                                                                                │
                               │                                                                                                │
                               │                                                                                                │
                               │                                                                                                │
                               │                                                                                                │
                               │                                                                                                │
                               │                                                                                                │
                               │                                                                                                │
                               │                                                                                                │
                               │                                                                                                │
                               │                                                                                                │
                               │                                                                                                │
                               │                                                                                                │
                               │                                                                                                │
                               │                                                                                                │
                               │                                                                                                │
                               │                                                                                                │
                               │                                                                                                │ ──────────────────────────────
                               │                                                                                                │ DIAGNOSTICS
                               │ ────────────────────────────────────────────────────────────────────────────────────────────── │ Errors                       0
                               │ DIFF PREVIEW                                                                                   │ Warnings                     —
                               │ No changes yet                                                                                 │ Infos                        —
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
Chat· │ Plan· │ Exec▶ │ Tasks2 │ Git2 │ Logs· │ Mem· │ Mdl· │ MCP· │ Skl· │ LSP· │ Tok48k/71k
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
>
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
● Connected │ 🔀 Git main │ Context: 48k / 71k tokens │ ⏱ 0m │ Ctrl+P Palette"
`;

exports[`layout snapshots same structure, density-only changes at 220x60 1`] = `
"devagent-ts v0.1.0                                                                                                                                                                  MODE: CODE   MODEL: qwen3:30b   10:42:11
────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
MISSION                        │ ACTIVITY FEED                                                                                                                                              │ CONTEXT
      No active mission        │ > create filesystem tool                                                                                                                                   │ 📁 Workspace     ollama-agent
 Start one with /plan <goal>   │                                                                                                                                                            │ ⎇ Branch                 main
────────────────────────────── │ • Analyzing project structure and existing patterns...                                                                                                     │ 🕐 Updated           10:42:11
TOOLS                          │     • Reading package.json                                                                                                                                 │ ──────────────────────────────
▶ edit_file                (1) │     • Found TypeScript project                                                                                                                             │ FILES (2 CHANGED)
View all tools... (/tools)     │   ↳ local/qwen3:30b                                                                                                                                        │ M src/tools/fs.ts
                               │                                                                                                                                                            │ A src/tools/index.ts
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │
                               │                                                                                                                                                            │ ──────────────────────────────
                               │                                                                                                                                                            │ DIAGNOSTICS
                               │ ────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────── │ Errors                       0
                               │ DIFF PREVIEW                                                                                                                                               │ Warnings                     —
                               │ No changes yet                                                                                                                                             │ Infos                        —
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
Chat· │ Plan· │ Exec▶ │ Tasks2 │ Git2 │ Logs· │ Mem· │ Mdl· │ MCP· │ Skl· │ LSP· │ Tok48k/71k
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
>
───────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────────
● Connected │ 🔀 Git main │ Context: 48k / 71k tokens │ ⏱ 0m │ Ctrl+P Palette"
`;
